--- a/cmake/windows/resources/installer-Windows.iss.in
+++ b/cmake/windows/resources/installer-Windows.iss.in
@@ -7,7 +7,7 @@
 ; NOTE: The value of AppId uniquely identifies this application.
 ; Do not use the same AppId value in installers for other applications.
 ; (To generate a new GUID, click Tools | Generate GUID inside the IDE.)
-AppId={{@UUID_APP@}
+AppId={{@UUID_APP@}}
 AppName={#MyAppName}
 AppVersion={#MyAppVersion}
 AppPublisher={#MyAppPublisher}
@@ -17,7 +17,7 @@ AppUpdatesURL={#MyAppURL}
 DefaultDirName={code:GetDirName}
 AppendDefaultDirName=no
 DefaultGroupName={#MyAppName}
-OutputBaseFilename={#MyAppName}-{#MyAppVersion}-Windows-Installer
+OutputBaseFilename={#MyAppName}-{#MyAppVersion}-windows-installer
 Compression=lzma
 SolidCompression=yes
 DirExistsWarning=no
@@ -97,8 +97,8 @@ begin
     ObsMajorVersion := ObsMS shr 16; 
     { select only low 16 bits }
     ObsMinorVersion := ObsMS and $FFFF;
-    if ObsMajorVersion < 30 then begin
-        MsgBox('Version of OBS Studio (bin\64bit\obs64.exe) is lower than the version 30 required.', mbError, MB_OK);
+    if ObsMajorVersion < 31 then begin
+        MsgBox('Version of OBS Studio (bin\64bit\obs64.exe) is lower than the version 31 required.', mbError, MB_OK);
         Result := False;
         exit;
     end;
